fixed data location changes

--- a/reviewAnalysis.ipynb
+++ b/reviewAnalysis.ipynb
@@ -1120,7 +1120,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "myData = pd.DataFrame.from_dict(topicTextrank(\"reviewsCleaned.csv\"))"
+    "myData = pd.DataFrame.from_dict(topicTextrank(\"data/reviewsCleaned.csv\"))"
    ]
   },
   {
